[package]
name = "async-net"
version = "1.5.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async networking primitives for TCP/UDP/Unix communication"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-net"
homepage = "https://github.com/smol-rs/async-net"
documentation = "https://docs.rs/async-net"
keywords = ["networking", "uds", "mio", "reactor", "std"]
categories = ["asynchronous", "network-programming", "os"]
readme = "README.md"

[dependencies]
async-io = "1.0.0"
blocking = "1.0.0"
fastrand = "1.3.5"
futures-lite = "1.11.0"
