[package]
name = "async-net"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.6.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.47"
description = "Async networking primitives for TCP/UDP/Unix communication"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-net"
homepage = "https://github.com/smol-rs/async-net"
documentation = "https://docs.rs/async-net"
keywords = ["networking", "uds", "mio", "reactor", "std"]
categories = ["asynchronous", "network-programming", "os"]
exclude = ["/.*"]

[dependencies]
async-io = "1.6.0"
blocking = "1.0.0"
futures-lite = "1.11.0"

[features]
io_safety = []